force-app/main/default/objects/HistoricoDaTabela__c/HistoricoDaTabela__c.object-meta.xml
<CustomObject>
    <label>Histórico da Tabela</label>
    <nameField>
        <label>Nome de Hist</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Históricos das Tabelas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>