force-app/main/default/objects/HistoricoDaTabela__c/fields/FimDaVigencia__c.field-meta.xml
<CustomField>
    <fullName>FimDaVigencia__c</fullName>
    <label>Fim da Vigência</label>
    <type>Date</type>
</CustomField>