force-app/main/default/objects/HistoricoDaTabela__c/fields/InicioDaVigencia__c.field-meta.xml
<CustomField>
    <fullName>InicioDaVigencia__c</fullName>
    <label>Início da Vigência</label>
    <type>Date</type>
</CustomField>