force-app/main/default/objects/HistoricoDaTabela__c/fields/NomeDaTabela__c.field-meta.xml
<CustomField>
    <fullName>NomeDaTabela__c</fullName>
    <label>Nome da tabela</label>
    <length>200</length>
    <type>Text</type>
</CustomField>