force-app/main/default/objects/HistoricoDaTabela__c/fields/PercentualDeAcrescimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualDeAcrescimo__c</fullName>
    <label>Percentual de acréscimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>