force-app/main/default/objects/HistoricoDaTabela__c/fields/ValorDeAcrescimo__c.field-meta.xml
<CustomField>
    <fullName>ValorDeAcrescimo__c</fullName>
    <label>Valor de acréscimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>